samples/_failures_safe/1761609332_b0338f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7fd48bbd.c: In function ‘main’:
./samples/SAFE/__tmp_7fd48bbd.c:141:9: error: expected expression at end of input
  141 |         'a', 'm', ' ', 'f', 'o', 'r', ' ',
      |         ^~~
./samples/SAFE/__tmp_7fd48bbd.c:141:9: error: expected declaration or statement at end of input
